<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="ltr"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:gravity="center"
        android:hint="@string/name_edittext"
        android:inputType="text"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/age_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="number"
        android:gravity="center"
        android:hint="@string/age_edittext"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/phone_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="phone"
        android:gravity="center"
        android:hint="@string/phone_edittext"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />


    <ImageButton
        android:id="@+id/camera_img_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        android:background="@null"
        android:contentDescription="@string/take_picture"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_photo_camera_24" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_main"
        android:contentDescription="@null"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_btn"
        android:textAllCaps="false"
        android:id="@+id/send_btn"/>


</LinearLayout>